Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12333

Unexpected error message given

XMLWordPrintable

    • cd813f93530512ffcedef6376e8c9266162c8714, 5d5feaa86f3933a1e89b53267953b86e2b0459ed, 0ea02a0576ebbc9cf8dfa9fb6c8137f2eb261422

      I'm using this construction to link x and y scales, but I'm getting a "binding loop detected" error message. Is this correct?

      transform: Scale {
                          id: container
                          yScale: container.xScale
                          xScale: 2.0
                      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            clivewhitear Clive Whitear
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes