Remove use of shared NOTIFY signals Sharing a NOTIFY signal can cause binding loop warnings with no apparent cause.

Task-number: QTBUG-12333
Reviewed-by: Aaron Kennedy
Reviewed-by: Michael Brasser
(cherry picked from commit cd813f93530512ffcedef6376e8c9266162c8714)